Added ability to execute report in new tab

--- a/SpagoBI-5.2/SpagoBIProject/src/main/webapp/js/src/ext/sbi/messages/messages.properties
+++ b/SpagoBI-5.2/SpagoBIProject/src/main/webapp/js/src/ext/sbi/messages/messages.properties
@@ -314,6 +314,8 @@ sbi.execution.parametersselection.message.page3.refresh = Click on the refresh b
 sbi.execution.parametersselection.message.unset.lov.parametric = You have to set the field(s) from which it depends on
 sbi.execution.parametersselection.executionbutton.message = Execute
 sbi.execution.parametersselection.executionbutton.tooltip = Fill the form below and click here to execute the document
+sbi.execution.parametersselection.executioninnewtabbutton.message = Execute in new tab
+sbi.execution.parametersselection.executioninnewtabbutton.tooltip = Fill the form below and click here to execute the document in new tab
 sbi.execution.parametersselection.maximizelookup.title = Insert the values or copy from a xls document
 sbi.execution.parametersselection.maximizelookup.ok = Ok
 sbi.execution.parametersselection.maximizelookup.clear = Clear
