--- a/SpagoBI-5.2/SpagoBIProject/src/main/webapp/js/src/ext/sbi/messages/messages.properties
+++ b/SpagoBI-5.2/SpagoBIProject/src/main/webapp/js/src/ext/sbi/messages/messages.properties
@@ -316,6 +316,7 @@ sbi.execution.parametersselection.executionbutton.message = Execute
 sbi.execution.parametersselection.executionbutton.tooltip = Fill the form below and click here to execute the document
 sbi.execution.parametersselection.executioninnewtabbutton.message = Execute in new tab
 sbi.execution.parametersselection.executioninnewtabbutton.tooltip = Fill the form below and click here to execute the document in new tab
+sbi.execution.parametersselection.executioninnewtabbutton.error = Please fill out all the required fields
 sbi.execution.parametersselection.exportbutton.message = Export to Excel
 sbi.execution.parametersselection.exportbutton.tooltip = Fill the form below and click here to export the document
 sbi.execution.parametersselection.maximizelookup.title = Insert the values or copy from a xls document
